new version on wsdl from java class to wsdl